--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,7 @@ a {
 h1 {
   font-weight: 600;
   font-size: var(--font-2xl);
+  line-height: 120%;
 }
 
 h2 {
@@ -365,6 +366,22 @@ img {
 
 /* ------- */
 
+.hideable {
+  animation: fade-in 1s;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+/* ------- */
+
 .book-list-item {
   display: flex;
   flex-direction: column;
@@ -427,18 +444,27 @@ img {
   margin-top: 2rem;
 }
 
-/* ------------------------- */
+/* ------- */
 
-.hideable {
-  animation: fade-in 1s;
+.error-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  gap: .25rem;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  padding: 2rem;
+
+  background: url('https://media.giphy.com/media/f1ohcPEHABwWY/giphy.gif') no-repeat center / cover;
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
+.error-screen>* {
+  padding: .25rem .5rem;
+  background: var(--c-bg-window);
 }
