--- a/src/index.css
+++ b/src/index.css
@@ -255,7 +255,7 @@ img {
   display: block;
   max-width: 100%;
   max-height: 100%;
-  margin: 1rem auto;
+  margin: auto;
 }
 
 
@@ -424,6 +424,8 @@ img {
   align-items: stretch;
   justify-content: flex-start;
   gap: .15rem;
+
+  margin: 2rem 0;
 }
 
 /* ------- */
