--- a/src/index.css
+++ b/src/index.css
@@ -303,6 +303,24 @@ img {
   margin-bottom: 1rem;
 }
 
+.icon_entry {
+  display: inline-block;
+  padding-right: .4rem;
+  animation: icon-entry .15s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
+
+@keyframes icon-entry {
+  0% {
+    max-width: 0;
+    transform: scale(0)
+  }
+
+  100% {
+    max-width: 30px;
+    transform: scale(1);
+  }
+}
+
 /* ------------------------- */
 
 .app-header {
